[package]
name = "tank"
version = "0.1.0"
authors = ["wangyuntao <wyt.daily@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = { path = "../ggez" }

[profile.release]
overflow-checks = true

[workspace]
members = ["editor"]