[package]
name = "tank"
version = "0.1.0"
authors = ["wangyuntao <wyt.daily@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
config = { path = "config" }
util = { path = "util" }

[profile.release]
overflow-checks = true

[workspace]
members = ["editor", "config", "util"]