[package]
name = "editor"
version = "0.1.0"
authors = ["wangyuntao <wyt.daily@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../../iced", features = ["canvas", "tokio", "debug"] }
iced_graphics = { path = "../../iced/graphics" }
util = { path = "../util" }